--- a/web/views/player.ejs
+++ b/web/views/player.ejs
@@ -395,7 +395,7 @@
 </head>
 <body>
 
-<header>Mochi Bar Database</header>
+<header>🍡 Player Page 🍡</header>
 
 <a href="/dashboard" class="back-button">
   <span>←</span>
